--- a/styles/main.css
+++ b/styles/main.css
@@ -4,40 +4,30 @@
 }
 
 .title-box {
+  position: relative;
   width: 50%;
   border-right: 1px solid #323232;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .title-box strong {
   display: block;
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 500;
   color: #323232;
-  line-height: 32px;
+  line-height: 45px;
 }
 
 .title-box strong span {
   display: block;
-  font-size: 26px;
-  font-weight: 500;
-  color: #9477ff;
+  color: #455de0;
 }
 
 .title-box .btn-resume {
-  display: inline-block;
+  position: absolute;
+  bottom: 15px;
+  left: 0;
   margin-top: 20px;
-  padding: 15px 25px;
-  font-size: 16px;
-  color: #323232;
-  border: 1px solid #323232;
-  border-radius: 3px;
-}
-
-.title-box .btn-resume:hover {
-  color: #fff;
-  background: #323232;
-  transition: all .3s;
 }
 
 .contents-box {
@@ -58,9 +48,102 @@
 }
 
 .contents-box dl dd {
+  margin-top: 5px;
   font-size: 16px;
   color: #323232;
   line-height: 24px;
 }
 
+.portfoilo-wrap {
+  margin-top: 100px;
+}
+
+.portfoilo-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.portfoilo-item:nth-child(n+2) {
+  margin-top: 100px;
+}
+
+.portfoilo-item>div {
+  position: relative;
+  width: 50%;
+}
+
+.portfoilo-item>div:first-child {
+  padding-right: 5%;
+  border-right: 1px solid #323232;
+}
+
+.portfoilo-item>div:last-child {
+  padding-left: 5%;
+}
+
+.txt-box .tit-area .num {
+  display: block;
+  font-size: 32px;
+  color: #f2afa3;
+  font-weight: 500;
+}
+
+.txt-box .tit-area .tit {
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 500;
+  color: #040404;
+}
+
+.txt-box .tit-area .tit .category {
+  display: block;
+  font-size: 16px;
+  font-weight: 300;
+  color: #040404;
+}
+
+.txt-box dl {
+  position: relative;
+  padding-top: 30px;
+}
+
+.txt-box dl::before {
+  content: '';
+  position: absolute;
+  top: 15px;
+  left: 0;
+  width: 15px;
+  height: 1px;
+  background: #f2afa3;
+}
+
+.txt-box dl dt {
+  font-size: 18px;
+  font-weight: 500;
+  color: #323232;
+  line-height: 28px;
+}
+
+.txt-box dl dt:nth-child(n + 2) {
+  margin-top: 15px;
+}
+
+.txt-box dl dd {
+  margin-top: 5px;
+  font-size: 16px;
+  color: #323232;
+  line-height: 24px;
+}
+
+.txt-box .btn-process {
+  margin-top: 50px;
+}
+
+.img-box .img {
+  width: 100%;
+  height: 100%;
+  background: #ddd;
+}
 
