--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -127,6 +127,7 @@ h1 {
   
   span {
     font-size: 16px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   }
 }
 
@@ -152,12 +153,13 @@ footer {
   position: fixed;
   bottom: 0;
   z-index: 5;
+  width: 100%;
   padding: 20px 0;
   text-align: center;
 
   .copyright {
-    margin: 0 auto;
     font-size: 16px;
-    color: #474747;
+    color: #040404;
+    opacity: .7;
   }
 }
