--- a/scss/main.scss
+++ b/scss/main.scss
@@ -161,22 +161,35 @@ $blue: #455de0;
 .contact-wrap {
   text-align: center;
 
-  .title {
+  .tit {
     display: block;
-    font-size: 24px;
+    font-size: 28px;
     color: $black;
   }
   
   .mail {
     display: block;
-    margin: 20px 0;
+    position: relative;
+    padding: 40px 0 60px;
     font-size: 60px;
     color: $black;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      width: 15px;
+      height: 1px;
+      background: $blue;
+      transform: translateX(-50%);
+    }
   }
   
   .text {
     display: block;
     font-size: 24px;
+    font-weight: 300;
     color: #323232;
   }
 }
