--- a/css/layout.css
+++ b/css/layout.css
@@ -141,7 +141,17 @@ h1 {
 }
 
 .title {
+  min-height: 100vh;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   font-family: "Playfair Display", serif;
   color: #fff;
@@ -149,12 +159,13 @@ h1 {
 
 .title h2 {
   font-size: 55px;
-  line-height: 90px;
+  line-height: 60px;
 }
 
 .title span {
   font-size: 16px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  display: block;
 }
 
 .btn-line {
@@ -180,12 +191,12 @@ footer {
   z-index: 5;
   width: 100%;
   padding: 20px 0;
-  text-align: center;
+  text-align: right;
 }
 
 footer .copyright {
   font-size: 16px;
-  color: #040404;
+  color: #ddd;
   opacity: .7;
 }
 /*# sourceMappingURL=layout.css.map */
