--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -115,19 +115,24 @@ h1 {
 }
 
 .title {
+  min-height: 100vh;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   font-family: "Playfair Display", serif;
   color: #fff;
 
   h2 {
     font-size: 55px;
-    line-height: 90px;
+    line-height: 60px;
   }
   
   span {
     font-size: 16px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    display: block;
   }
 }
 
@@ -155,11 +160,11 @@ footer {
   z-index: 5;
   width: 100%;
   padding: 20px 0;
-  text-align: center;
+  text-align: right;
 
   .copyright {
     font-size: 16px;
-    color: #040404;
+    color: #ddd;
     opacity: .7;
   }
 }
