--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@
 }
 
 .portfoilo-wrap .portfoilo-item .img-box .img.inha {
-  background-image: url("/images/inha.png");
+  background-image: url("/images/inha02.png");
 }
 
 .portfoilo-wrap .portfoilo-item .img-box .img.kca {
