--- a/scss/main.scss
+++ b/scss/main.scss
@@ -179,7 +179,7 @@ $blue: #455de0;
           background-image: url('/images/ikea.png');
         }
         &.zooCoffee{
-          background-image: url('/images/zooCoffee.png');
+          background-image: url('/images/zoocoffee.png');
         }
         img{
           max-width: 100%;
