--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@ $blue: #455de0;
     width: 50%;
     border-right: 1px solid #323232;
     padding: 20px 5% 0 0;
+    box-sizing: border-box;
 
     strong {
       display: block;
@@ -69,7 +70,7 @@ $blue: #455de0;
   padding-bottom: 100px;
 
   .portfoilo-item {
-    display: flex;
+    display: block;
     justify-content: space-between;
 
     &:nth-child(n+2) {
@@ -79,14 +80,17 @@ $blue: #455de0;
     >div {
       position: relative;
       width: 50%;
+      box-sizing: border-box;
     }
 
     .left-box {
+      float: left;
       padding-right: 5%;
       border-right: 1px solid #ddd;
     }
     
     .right-box {
+      float: right;
       padding-left: 5%;
     }
 
@@ -223,5 +227,83 @@ $blue: #455de0;
     font-weight: 300;
     color: #323232;
   }
+}
+
+
+@media all and (max-width:768px){
+  .about-wrap {
+    display: block;
+    padding-top: 70px;
+    padding-bottom: 70px;
+  
+    .title-box {
+      width: 100%;
+      border-right: none;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 20px;
+      .btn-resume{
+        position: static;
+      }
+    }
+  
+    .contents-box {
+      width: 100%;
+      padding-left: 0;
+    
+    }
+  }
+  
+  .portfoilo-wrap {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  
+    .portfoilo-item {
+      display: block;
+  
+      >div {
+        position: relative;
+        width: 100%; 
+        & + div{
+          margin-top: 30px;
+        }
+      }
+  
+      .left-box {
+        padding-right: 0;
+        border-right: none;
+      }
+      
+      .right-box {
+        padding-left: 0;
+      }
+  
+      .img-box {
+        .img {
+          -webkit-box-shadow: none;
+          box-shadow: none;
+        }
+      }
+    }
+  }
+  
+  .contact-wrap {
+    text-align: center;
+  
+    .tit {
+      display: block;
+      font-size: 28px;
+      color: $black;
+    }
+    
+    .mail {
+      font-size: 30px;
+      padding: 20px 0 30px;
+  
+      &::before {
+        top: 8px;
+      }
+    }
+  }
+  
 }
 
