--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -15,7 +15,6 @@ $blue: #455de0;
   }
 }
 
-
 .inner-wrap {
   max-width: 1200px;
   width: 100%;
@@ -41,7 +40,7 @@ header {
 
     ul li {
       float: left;
-      & + li { 
+      & + li {
         margin-left: 80px;
       }
       a {
@@ -49,7 +48,7 @@ header {
         font-weight: bold;
         color: $black;
       }
-      &:hover a{
+      &:hover a {
         color: $blue;
       }
       &.active a {
@@ -59,6 +58,96 @@ header {
   }
 }
 
+.mobile-menu {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  margin: 0;
+  z-index: 9;
+}
+.btn-menu {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+  z-index: 99;
+  top: 25px;
+  right: 25px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all ease 0.5s;
+  span {
+    width: 22px;
+    height: 2px;
+    display: block;
+    background-color: #706fff;
+    margin: 16px auto 0px;
+    position: relative;
+    transition: all 0.3s;
+    &:before {
+      content: "";
+      position: absolute;
+      width: 22px;
+      height: 2px;
+      top: 8px;
+      left: 0;
+      background-color: #706fff;
+      transition: all 0.3s;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      width: 22px;
+      height: 2px;
+      top: 16px;
+      left: 0;
+      background-color: #706fff;
+    }
+  }
+  &.active {
+    background-color: #ff8988;
+    span {
+      background-color: #fff;
+      margin: 24px auto 0px;
+      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      &:before {
+        background-color: #fff;
+        margin: -8px auto 0px;
+        transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+      }
+      &:after {
+        display: none;
+      }
+    }
+  }
+}
+.hide-menu {
+  position: fixed;
+  padding: 100px 80px 0 80px;
+  width: 0%;
+  height: 100vh;
+  background-color: #fafafa;
+  z-index: 98;
+  transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  right: -100%;
+  box-sizing: border-box;
+  li {
+    margin-bottom: 10px;
+  }
+  &.show {
+    width: 60%;
+    right: 0;
+  }
+}
 .box {
   width: 100%;
   border-radius: 5px;
@@ -131,14 +220,13 @@ h1 {
     font-size: 55px;
     line-height: 60px;
   }
-  
+
   span {
     font-size: 16px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     display: block;
   }
 }
-
 
 .btn-line {
   display: inline-block;
@@ -156,7 +244,6 @@ h1 {
   }
 }
 
-
 footer {
   position: fixed;
   bottom: 0;
@@ -168,6 +255,19 @@ footer {
   .copyright {
     font-size: 16px;
     color: #ddd;
-    opacity: .7;
+    opacity: 0.7;
+  }
+}
+
+@media all and (max-width: 768px) {
+  h1 {
+    transform: rotate(0);
+    top: 20px;
+  }  
+  .mobile-menu {
+    display: block;
+  }
+  header {
+    display: none;
   }
 }
