--- a/css/layout.css
+++ b/css/layout.css
@@ -88,7 +88,7 @@ header nav ul li.active a {
   z-index: 9;
 }
 
-.btn-menu {
+.mobile-menu .btn-menu {
   position: fixed;
   width: 50px;
   height: 50px;
@@ -104,44 +104,44 @@ header nav ul li.active a {
   transition: all ease 0.5s;
 }
 
-.btn-menu span {
+.mobile-menu .btn-menu span {
   width: 22px;
   height: 2px;
   display: block;
-  background-color: #706fff;
+  background-color: #455de0;
   margin: 16px auto 0px;
   position: relative;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
-.btn-menu span:before {
+.mobile-menu .btn-menu span:before {
   content: "";
   position: absolute;
   width: 22px;
   height: 2px;
   top: 8px;
   left: 0;
-  background-color: #706fff;
+  background-color: #455de0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
-.btn-menu span:after {
+.mobile-menu .btn-menu span:after {
   content: "";
   position: absolute;
   width: 22px;
   height: 2px;
   top: 16px;
   left: 0;
-  background-color: #706fff;
+  background-color: #455de0;
 }
 
-.btn-menu.active {
-  background-color: #ff8988;
+.mobile-menu .btn-menu.active {
+  background-color: #f2afa3;
 }
 
-.btn-menu.active span {
+.mobile-menu .btn-menu.active span {
   background-color: #fff;
   margin: 24px auto 0px;
   transform: rotate(45deg);
@@ -149,7 +149,7 @@ header nav ul li.active a {
   -moz-transform: rotate(45deg);
 }
 
-.btn-menu.active span:before {
+.mobile-menu .btn-menu.active span:before {
   background-color: #fff;
   margin: -8px auto 0px;
   transform: rotate(90deg);
@@ -157,14 +157,14 @@ header nav ul li.active a {
   -moz-transform: rotate(90deg);
 }
 
-.btn-menu.active span:after {
+.mobile-menu .btn-menu.active span:after {
   display: none;
 }
 
-.hide-menu {
+.mobile-menu .hide-menu {
   position: fixed;
-  padding: 100px 80px 0 80px;
-  width: 0%;
+  padding: 120px 40px 0;
+  width: 60%;
   height: 100vh;
   background-color: #fafafa;
   z-index: 98;
@@ -176,12 +176,16 @@ header nav ul li.active a {
           box-sizing: border-box;
 }
 
-.hide-menu li {
-  margin-bottom: 10px;
+.mobile-menu .hide-menu li + li {
+  margin-top: 30px;
 }
 
-.hide-menu.show {
-  width: 60%;
+.mobile-menu .hide-menu li a {
+  font-size: 24px;
+  color: #455de0;
+}
+
+.mobile-menu .hide-menu.show {
   right: 0;
 }
 
@@ -252,7 +256,6 @@ h1 {
 }
 
 .title {
-  min-height: 100vh;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -263,20 +266,22 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-height: 100vh;
   text-align: center;
-  font-family: "Playfair Display", serif;
   color: #fff;
 }
 
 .title h2 {
   font-size: 55px;
   line-height: 60px;
+  font-family: "Playfair Display", serif;
 }
 
 .title span {
-  font-size: 16px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   display: block;
+  font-size: 16px;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+  font-weight: 300;
 }
 
 .btn-line {
@@ -313,15 +318,27 @@ footer .copyright {
 
 @media all and (max-width: 768px) {
   h1 {
+    top: 25px;
+    left: 16px;
     -webkit-transform: rotate(0);
             transform: rotate(0);
-    top: 20px;
+  }
+  .title h2 {
+    font-size: 45px;
+    line-height: 50px;
+  }
+  .title span {
+    font-size: 16px;
+  }
+  header {
+    display: none;
   }
   .mobile-menu {
     display: block;
   }
-  header {
-    display: none;
+  .btn-line {
+    padding: 12px 22px;
+    font-size: 14px;
   }
 }
 /*# sourceMappingURL=layout.css.map */
