--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -5,6 +5,7 @@
 
 $black: #040404;
 $blue: #455de0;
+$pink: #f2afa3;
 
 @keyframes drift {
   from {
@@ -66,88 +67,106 @@ header {
   top: 0;
   margin: 0;
   z-index: 9;
-}
-.btn-menu {
-  position: fixed;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
-  z-index: 99;
-  top: 25px;
-  right: 25px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: all ease 0.5s;
-  span {
-    width: 22px;
-    height: 2px;
-    display: block;
-    background-color: #706fff;
-    margin: 16px auto 0px;
-    position: relative;
-    transition: all 0.3s;
-    &:before {
-      content: "";
-      position: absolute;
-      width: 22px;
-      height: 2px;
-      top: 8px;
-      left: 0;
-      background-color: #706fff;
-      transition: all 0.3s;
-    }
-    &:after {
-      content: "";
-      position: absolute;
-      width: 22px;
-      height: 2px;
-      top: 16px;
-      left: 0;
-      background-color: #706fff;
-    }
-  }
-  &.active {
-    background-color: #ff8988;
+
+  .btn-menu {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+    z-index: 99;
+    top: 25px;
+    right: 25px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all ease 0.5s;
+
     span {
-      background-color: #fff;
-      margin: 24px auto 0px;
-      transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
+      width: 22px;
+      height: 2px;
+      display: block;
+      background-color: $blue;
+      margin: 16px auto 0px;
+      position: relative;
+      transition: all 0.3s;
+
       &:before {
-        background-color: #fff;
-        margin: -8px auto 0px;
-        transform: rotate(90deg);
-        -webkit-transform: rotate(90deg);
-        -moz-transform: rotate(90deg);
+        content: "";
+        position: absolute;
+        width: 22px;
+        height: 2px;
+        top: 8px;
+        left: 0;
+        background-color: $blue;
+        transition: all 0.3s;
       }
+
       &:after {
-        display: none;
+        content: "";
+        position: absolute;
+        width: 22px;
+        height: 2px;
+        top: 16px;
+        left: 0;
+        background-color: $blue;
+      }
+    }
+
+    &.active {
+      background-color: $pink;
+
+      span {
+        background-color: #fff;
+        margin: 24px auto 0px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+
+        &:before {
+          background-color: #fff;
+          margin: -8px auto 0px;
+          transform: rotate(90deg);
+          -webkit-transform: rotate(90deg);
+          -moz-transform: rotate(90deg);
+        }
+
+        &:after {
+          display: none;
+        }
       }
     }
   }
-}
-.hide-menu {
-  position: fixed;
-  padding: 100px 80px 0 80px;
-  width: 0%;
-  height: 100vh;
-  background-color: #fafafa;
-  z-index: 98;
-  transition: all ease 0.5s;
-  -webkit-transition: all ease 0.5s;
-  -moz-transition: all ease 0.5s;
-  right: -100%;
-  box-sizing: border-box;
-  li {
-    margin-bottom: 10px;
-  }
-  &.show {
+
+  .hide-menu {
+    position: fixed;
+    padding: 120px 40px 0;
     width: 60%;
-    right: 0;
+    height: 100vh;
+    background-color: #fafafa;
+    z-index: 98;
+    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+    right: -100%;
+    box-sizing: border-box;
+
+    li {
+      & + li {
+        margin-top: 30px;
+      }
+
+      a {
+        font-size: 24px;
+        color: $blue;
+      }
+    }
+
+    &.show {
+      right: 0;
+    }
   }
 }
+
 .box {
   width: 100%;
   border-radius: 5px;
@@ -207,24 +226,25 @@ h1 {
 }
 
 .title {
-  min-height: 100vh;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
   text-align: center;
-  font-family: "Playfair Display", serif;
   color: #fff;
 
   h2 {
     font-size: 55px;
     line-height: 60px;
+    font-family: "Playfair Display", serif;
   }
 
   span {
-    font-size: 16px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     display: block;
+    font-size: 16px;
+    font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+    font-weight: 300;
   }
 }
 
@@ -261,13 +281,31 @@ footer {
 
 @media all and (max-width: 768px) {
   h1 {
+    top: 25px;
+    left: 16px;
     transform: rotate(0);
-    top: 20px;
-  }  
+  }
+
+  .title {
+    h2 {
+      font-size: 45px;
+      line-height: 50px;
+    }
+  
+    span {
+      font-size: 16px;
+    }
+  }
+
+  header {
+    display: none;
+  }
   .mobile-menu {
     display: block;
   }
-  header {
-    display: none;
+
+  .btn-line {
+    padding: 12px 22px;
+    font-size: 14px;
   }
 }
