--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
 $black: #040404;
 $blue: #455de0;
+$pink: #f2afa3;
 
-
-.section{
+.section {
   min-height: 100vh;
 }
 
@@ -13,7 +13,7 @@ $blue: #455de0;
   .title-box {
     position: relative;
     width: 50%;
-    border-right: 1px solid #323232;
+    border-right: 1px solid #ddd;
     padding: 20px 5% 0 0;
     box-sizing: border-box;
 
@@ -42,19 +42,20 @@ $blue: #455de0;
     width: 50%;
     padding-left: 5%;
     padding: 20px 0 15px 5%;
-  
+    box-sizing: border-box;
+
     dl {
       dt {
         font-size: 18px;
         font-weight: 500;
         color: #323232;
         line-height: 28px;
-  
+
         &:nth-child(n + 2) {
           margin-top: 20px;
         }
       }
-  
+
       dd {
         margin-top: 5px;
         font-size: 16px;
@@ -73,11 +74,11 @@ $blue: #455de0;
     display: block;
     justify-content: space-between;
 
-    &:nth-child(n+2) {
+    &:nth-child(n + 2) {
       margin-top: 100px;
     }
 
-    >div {
+    > div {
       position: relative;
       width: 50%;
       box-sizing: border-box;
@@ -88,7 +89,7 @@ $blue: #455de0;
       padding-right: 5%;
       border-right: 1px solid #ddd;
     }
-    
+
     .right-box {
       float: right;
       padding-left: 5%;
@@ -99,7 +100,7 @@ $blue: #455de0;
         .num {
           display: block;
           font-size: 32px;
-          color: #f2afa3;
+          color: $pink;
           font-weight: 500;
         }
 
@@ -124,13 +125,13 @@ $blue: #455de0;
         padding-top: 30px;
 
         &::before {
-          content: '';
+          content: "";
           position: absolute;
           top: 15px;
           left: 0;
           width: 15px;
           height: 1px;
-          background: #f2afa3;
+          background: $pink;
         }
 
         dt {
@@ -143,7 +144,7 @@ $blue: #455de0;
             margin-top: 15px;
           }
         }
-        
+
         dd {
           margin-top: 5px;
           font-size: 16px;
@@ -161,31 +162,33 @@ $blue: #455de0;
       .img {
         width: 100%;
         padding-top: 100%;
-        background: #f00;
-        -webkit-box-shadow: 9px 5px 15px 1px rgba(0,0,0,0.2); 
-        box-shadow: 9px 5px 15px 1px rgba(0,0,0,0.2);
+        background: #ddd;
+        -webkit-box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
+        box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: top 0 left 50%;
-        &.daelim{
-          background-image: url('/images/daelim.png');
+
+        &.daelim {
+          background-image: url("/images/daelim.png");
         }
-        &.gtec{
-          background-image: url('/images/gtec.png');
+        &.gtec {
+          background-image: url("/images/gtec.png");
         }
-        &.inha{
-          background-image: url('/images/inha.png');
+        &.inha {
+          background-image: url("/images/inha.png");
         }
-        &.kca{
-          background-image: url('/images/kca.png');
+        &.kca {
+          background-image: url("/images/kca.png");
+          background-position-y: 8%;
         }
-        &.ikea{
-          background-image: url('/images/ikea.png');
+        &.ikea {
+          background-image: url("/images/ikea.png");
         }
-        &.zooCoffee{
-          background-image: url('/images/zoocoffee.png');
+        &.zooCoffee {
+          background-image: url("/images/zoocoffee.png");
         }
-        img{
+        img {
           max-width: 100%;
         }
       }
@@ -201,7 +204,7 @@ $blue: #455de0;
     font-size: 28px;
     color: $black;
   }
-  
+
   .mail {
     display: block;
     position: relative;
@@ -210,7 +213,7 @@ $blue: #455de0;
     color: $black;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 20px;
       left: 50%;
@@ -220,7 +223,7 @@ $blue: #455de0;
       transform: translateX(-50%);
     }
   }
-  
+
   .text {
     display: block;
     font-size: 24px;
@@ -229,54 +232,109 @@ $blue: #455de0;
   }
 }
 
-
-@media all and (max-width:768px){
+@media all and (max-width: 768px) {
   .about-wrap {
     display: block;
-    padding-top: 70px;
-    padding-bottom: 70px;
-  
+    padding-top: 75px;
+    padding-bottom: 75px;
+
     .title-box {
       width: 100%;
       border-right: none;
       border-bottom: 1px solid #ddd;
-      padding-bottom: 20px;
-      .btn-resume{
+      padding: 20px 0 30px;
+      text-align: center;
+
+      strong {
+        font-size: 28px;
+      }
+
+      .btn-resume {
         position: static;
+        margin-top: 30px;
       }
     }
-  
+
     .contents-box {
       width: 100%;
       padding-left: 0;
-    
+
+      dl {
+        dt {
+          font-size: 16px;
+          line-height: 24px;
+        }
+  
+        dd {
+          font-size: 14px;
+
+          br {
+            display: none;
+          }
+        }
+      }
     }
   }
-  
+
   .portfoilo-wrap {
-    padding-top: 70px;
-    padding-bottom: 70px;
-  
+    padding-top: 75px;
+    padding-bottom: 75px;
+
     .portfoilo-item {
       display: block;
-  
-      >div {
+
+      > div {
         position: relative;
-        width: 100%; 
-        & + div{
+        width: 100%;
+
+        & + div {
           margin-top: 30px;
         }
       }
-  
+
       .left-box {
         padding-right: 0;
         border-right: none;
       }
-      
+
       .right-box {
         padding-left: 0;
       }
+
+      .txt-box {
+        .tit-area {
+          .num {
+            font-size: 24px;
+          }
   
+          .tit {
+            margin-top: 10px;
+            font-size: 28px;
+            line-height: 32px;
+            letter-spacing: -0.5px;
+  
+            .category {
+              font-size: 14px;
+            }
+          }
+        }
+  
+        dl {
+          dt {
+            font-size: 16px;
+            line-height: 24px;
+          }
+  
+          dd {
+            font-size: 14px;
+          }
+        }
+  
+        .btn-process {
+          margin-top: 30px;
+        }
+      }
+
       .img-box {
         .img {
           -webkit-box-shadow: none;
@@ -285,25 +343,24 @@ $blue: #455de0;
       }
     }
   }
-  
+
   .contact-wrap {
-    text-align: center;
-  
     .tit {
-      display: block;
-      font-size: 28px;
-      color: $black;
+      font-size: 18px;
     }
-    
+
     .mail {
-      font-size: 30px;
-      padding: 20px 0 30px;
-  
+      font-size: 26px;
+      padding: 20px 0 40px;
+
       &::before {
-        top: 8px;
+        top: 10px;
+        width: 10px;
       }
     }
-  }
-  
-}
 
+    .text {
+      font-size: 20px;
+    }
+  }
+}
