--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
   min-height: 100vh;
 }
 
+.section.section-gray {
+  background-color: #fafafa;
+}
+
 .about-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9,13 +13,15 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .about-wrap .title-box {
   position: relative;
   width: 50%;
   border-right: 1px solid #ddd;
-  padding: 20px 5% 0 0;
+  padding-right: 5%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -25,12 +31,19 @@
   font-size: 32px;
   font-weight: 500;
   color: #323232;
-  line-height: 45px;
+  line-height: 50px;
 }
 
 .about-wrap .title-box strong span {
   display: block;
   color: #455de0;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.about-wrap .title-box strong span.point {
+  margin-bottom: 10px;
+  color: #192d9a;
 }
 
 .about-wrap .title-box .btn-resume {
@@ -43,32 +56,42 @@
 .about-wrap .contents-box {
   width: 50%;
   padding-left: 5%;
-  padding: 20px 0 15px 5%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.about-wrap .contents-box dl dt {
+.about-wrap .contents-box ul li {
+  position: relative;
+  padding-left: 30px;
+}
+
+.about-wrap .contents-box ul li:nth-child(n + 2) {
+  margin-top: 30px;
+}
+
+.about-wrap .contents-box ul li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 6px;
+  width: 14px;
+  height: 14px;
+  background: url("/images/icon-checkmark.png") no-repeat center;
+  background-size: 100%;
+}
+
+.about-wrap .contents-box ul li strong {
   font-size: 18px;
   font-weight: 500;
-  color: #323232;
+  color: #040404;
   line-height: 28px;
 }
 
-.about-wrap .contents-box dl dt:nth-child(n + 2) {
-  margin-top: 20px;
-}
-
-.about-wrap .contents-box dl dd {
+.about-wrap .contents-box ul li p {
   margin-top: 5px;
   font-size: 16px;
   color: #323232;
   line-height: 24px;
-}
-
-.portfoilo-wrap {
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .portfoilo-wrap .portfoilo-item {
@@ -76,10 +99,15 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 60px 0;
 }
 
-.portfoilo-wrap .portfoilo-item:nth-child(n + 2) {
-  margin-top: 100px;
+.portfoilo-wrap .portfoilo-item:first-child {
+  padding-top: 100px;
+}
+
+.portfoilo-wrap .portfoilo-item:last-child {
+  padding-bottom: 100px;
 }
 
 .portfoilo-wrap .portfoilo-item > div {
@@ -239,43 +267,52 @@
 @media all and (max-width: 768px) {
   .about-wrap {
     display: block;
-    padding-top: 75px;
-    padding-bottom: 75px;
   }
   .about-wrap .title-box {
     width: 100%;
     border-right: none;
     border-bottom: 1px solid #ddd;
-    padding: 20px 0 30px;
+    padding: 0 0 50px;
     text-align: center;
   }
   .about-wrap .title-box strong {
     font-size: 28px;
+    line-height: 45px;
   }
   .about-wrap .title-box .btn-resume {
     position: static;
-    margin-top: 30px;
+    margin-top: 40px;
   }
   .about-wrap .contents-box {
     width: 100%;
-    padding-left: 0;
+    padding: 50px 0 0;
   }
-  .about-wrap .contents-box dl dt {
+  .about-wrap .contents-box ul li::before {
+    top: 4px;
+  }
+  .about-wrap .contents-box ul li strong {
     font-size: 16px;
     line-height: 24px;
   }
-  .about-wrap .contents-box dl dd {
+  .about-wrap .contents-box ul li p {
     font-size: 14px;
   }
-  .about-wrap .contents-box dl dd br {
+  .about-wrap .contents-box ul li p br {
     display: none;
-  }
-  .portfoilo-wrap {
-    padding-top: 75px;
-    padding-bottom: 75px;
   }
   .portfoilo-wrap .portfoilo-item {
     display: block;
+    position: relative;
+    padding: 50px 0;
+  }
+  .portfoilo-wrap .portfoilo-item:nth-child(2n)::before {
+    content: '';
+    position: absolute;
+    left: -500px;
+    top: 0;
+    width: 2000px;
+    height: 100%;
+    background-color: #fafafa;
   }
   .portfoilo-wrap .portfoilo-item > div {
     position: relative;
@@ -316,6 +353,7 @@
   .portfoilo-wrap .portfoilo-item .img-box .img {
     -webkit-box-shadow: none;
     box-shadow: none;
+    border: 1px solid #f5f5f5;
   }
   .contact-wrap .tit {
     font-size: 18px;
