--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -34,7 +34,7 @@ header {
   background: rgba(255, 255, 255, 0.3);
 
   nav {
-    height: 100px;
+    height: 80px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -59,14 +59,31 @@ header {
   }
 }
 
-.mobile-menu {
+.mobile-gnb-dim {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.7;
+  filter: alpha(opaicty=80);
+
+  &.active {
+    display: block;
+  }
+}
+
+.mobile-gnb-wrap {
   position: absolute;
   display: none;
   width: 100%;
   height: 60px;
   top: 0;
   margin: 0;
-  z-index: 9;
+  z-index: 1000;
 
   .btn-menu {
     position: fixed;
@@ -74,7 +91,7 @@ header {
     height: 50px;
     background-color: #fff;
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
-    z-index: 99;
+    z-index: 1002;
     top: 25px;
     right: 25px;
     border-radius: 50%;
@@ -137,13 +154,13 @@ header {
     }
   }
 
-  .hide-menu {
+  .mobile-gnb {
     position: fixed;
     padding: 120px 40px 0;
     width: 60%;
     height: 100vh;
     background-color: #fafafa;
-    z-index: 98;
+    z-index: 1001;
     transition: all ease 0.5s;
     -webkit-transition: all ease 0.5s;
     -moz-transition: all ease 0.5s;
@@ -203,7 +220,7 @@ header {
     &.two {
       animation: drift 7000ms infinite linear;
       opacity: 0.1;
-      background: yellow;
+      background: #ff79ed;
     }
 
     &.three {
@@ -215,8 +232,8 @@ header {
 
 h1 {
   position: fixed;
-  top: 50px;
-  left: 25px;
+  top: 40px;
+  left: 16px;
   font-size: 16px;
   font-weight: 300;
   color: $black;
@@ -243,26 +260,54 @@ h1 {
   span {
     display: block;
     font-size: 16px;
-    font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+    font-family: "Roboto", "Noto Sans KR", sans-serif;
     font-weight: 300;
   }
 }
 
 .btn-line {
+  position: relative;
   display: inline-block;
   padding: 15px 25px;
-  font-size: 16px;
-  color: #323232;
-  border: 1px solid #323232;
-  border-radius: 3px;
+  text-align: left;
+  border: none;
+  box-sizing: border-box;
+  background: #e8e8e8;
+  transition: 500ms ease all;
+  color: $black;
+  font-weight: 500;
 
   &:hover {
-    color: #fff;
-    background: rgba(69, 93, 224, 0.7);
-    border: 1px solid rgba(69, 93, 224, 0.7);
-    transition: all 0.3s;
+    background: transparent;
+    color: $blue;
+
+    &:before,
+    &:after {
+      width: 100%;
+      transition: 500ms ease all;
+    }
+  }
+
+  &:before, 
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: $blue;
+    transition: 300ms ease all;
+  }
+
+  &:after {
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
   }
 }
+
 
 footer {
   position: fixed;
@@ -291,7 +336,7 @@ footer {
       font-size: 45px;
       line-height: 50px;
     }
-  
+
     span {
       font-size: 16px;
     }
@@ -300,7 +345,7 @@ footer {
   header {
     display: none;
   }
-  .mobile-menu {
+  .mobile-gnb-wrap {
     display: block;
   }
 
