--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
 .about-wrap .title-box strong {
   display: block;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 400;
   color: #323232;
   line-height: 50px;
 }
@@ -280,7 +280,7 @@
     line-height: 45px;
   }
   .about-wrap .title-box .btn-resume {
-    position: static;
+    position: relative;
     margin-top: 40px;
   }
   .about-wrap .contents-box {
