--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ $pink: #f2afa3;
     strong {
       display: block;
       font-size: 32px;
-      font-weight: 500;
+      font-weight: 400;
       color: #323232;
       line-height: 50px;
 
@@ -278,7 +278,7 @@ $pink: #f2afa3;
       }
 
       .btn-resume {
-        position: static;
+        position: relative;
         margin-top: 40px;
       }
     }
