--- a/css/layout.css
+++ b/css/layout.css
@@ -304,8 +304,9 @@ h1 {
 .btn-line {
   position: relative;
   display: inline-block;
-  padding: 15px 25px;
-  text-align: left;
+  min-width: 150px;
+  padding: 15px 0;
+  text-align: center;
   border: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -382,7 +383,8 @@ footer .copyright {
     display: block;
   }
   .btn-line {
-    padding: 12px 22px;
+    min-width: 120px;
+    padding: 12px 0;
     font-size: 14px;
   }
 }
