--- a/css/main.css
+++ b/css/main.css
@@ -94,20 +94,16 @@
   line-height: 24px;
 }
 
+.portfoilo-wrap {
+  padding: 60px 16px;
+}
+
 .portfoilo-wrap .portfoilo-item {
   display: block;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 60px 0;
-}
-
-.portfoilo-wrap .portfoilo-item:first-child {
-  padding-top: 100px;
-}
-
-.portfoilo-wrap .portfoilo-item:last-child {
-  padding-bottom: 100px;
 }
 
 .portfoilo-wrap .portfoilo-item > div {
@@ -141,6 +137,8 @@
   font-size: 32px;
   line-height: 36px;
   font-weight: 500;
+  letter-spacing: -0.8px;
+  word-break: keep-all;
   color: #040404;
 }
 
@@ -148,6 +146,7 @@
   display: block;
   font-size: 16px;
   font-weight: 300;
+  letter-spacing: 1px;
 }
 
 .portfoilo-wrap .portfoilo-item .txt-box dl {
@@ -198,6 +197,14 @@
   background-position: top 0 left 50%;
 }
 
+.portfoilo-wrap .portfoilo-item .img-box .img.wireline {
+  background-image: url("/images/wireline.png");
+}
+
+.portfoilo-wrap .portfoilo-item .img-box .img.esim {
+  background-image: url("/images/esim.png");
+}
+
 .portfoilo-wrap .portfoilo-item .img-box .img.daelim {
   background-image: url("/images/daelim.png");
 }
@@ -225,6 +232,11 @@
 
 .portfoilo-wrap .portfoilo-item .img-box .img img {
   max-width: 100%;
+}
+
+.portfoilo-wrap .veiw-more-area {
+  text-align: center;
+  margin: 100px auto 50px;
 }
 
 .contact-wrap {
@@ -334,8 +346,7 @@
   .portfoilo-wrap .portfoilo-item .txt-box .tit-area .tit {
     margin-top: 10px;
     font-size: 28px;
-    line-height: 32px;
-    letter-spacing: -0.5px;
+    line-height: 34px;
   }
   .portfoilo-wrap .portfoilo-item .txt-box .tit-area .tit .category {
     font-size: 14px;
@@ -354,6 +365,9 @@
     -webkit-box-shadow: none;
     box-shadow: none;
     border: 1px solid #f5f5f5;
+  }
+  .portfoilo-wrap .veiw-more-area {
+    margin: 70px auto 0;
   }
   .contact-wrap .tit {
     font-size: 18px;
